--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-   <img src"pinguin.jpeg" alt="pinguin"/>
+   <img src="pinguin.jpeg" alt="pinguin"/>
     
 </body>
 </html>
